--- a/test.html
+++ b/test.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Công cụ xử lý PDF & Ảnh - iLovePDF API</title>
-    <!-- FIX: Favicon link points to your logo.png file -->
     <link rel="icon" type="image/png" href="logo.png">
     <!-- Tải Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -37,10 +36,10 @@
 <body class="bg-gray-100 text-gray-800">
     
     <!-- Header Placeholder -->
-    <header id="page-header"></header>
+    <header id="mini-header.html"></header>
 
     <main class="min-h-screen w-full flex items-center justify-center p-4">
-        <div class="w-full max-w-6xl bg-white rounded-2xl shadow-xl p-6 md:p-8 space-y-6 flex flex-col" style="max-height: calc(100vh - 4rem);">
+        <div class="w-full max-w-7xl bg-white rounded-2xl shadow-xl p-6 md:p-8 space-y-6 flex flex-col" style="height: calc(100vh - 4rem);">
             <!-- Title -->
             <div class="text-center flex-shrink-0">
                 <h1 class="text-2xl md:text-3xl font-bold text-gray-900">Công cụ xử lý PDF & Ảnh</h1>
@@ -49,7 +48,7 @@
 
             <div class="flex-grow flex flex-col md:flex-row gap-8 overflow-hidden">
                 <!-- Left Column: Options -->
-                <div class="w-full md:w-2/5 lg:w-1/3 space-y-6 flex-shrink-0 overflow-y-auto pr-4">
+                <div class="w-full md:w-1/5 lg:w-1/3 space-y-6 flex-shrink-0 overflow-y-auto pr-4">
                     <!-- Upload Area -->
                     <div id="uploadBox" class="border-2 border-dashed border-gray-300 rounded-xl p-6 text-center space-y-4">
                          <div class="flex justify-center"><svg class="w-12 h-12 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M12 16.5V9.75m0 0l-3 3m3-3l3 3M6.75 19.5a4.5 4.5 0 01-1.41-8.775 5.25 5.25 0 0110.33-2.125 5.25 5.25 0 011.065 10.91A4.5 4.5 0 0112 19.5z" /></svg></div>
@@ -136,7 +135,7 @@
     </main>
 
     <!-- Footer Placeholder -->
-    <footer id="page-footer"></footer>
+    <footer id="footer.html"></footer>
 
     <script>
         // --- DOM Elements ---
