--- a/test.html
+++ b/test.html
@@ -40,7 +40,7 @@
     <header id="page-header"></header>
 
     <main class="min-h-screen w-full flex items-center justify-center p-4">
-        <div class="w-full max-w-6xl bg-white rounded-2xl shadow-xl p-6 md:p-8 space-y-6 flex flex-col" style="max-height: calc(100vh - 4rem);">
+        <div class="w-full max-w-6x2 bg-white rounded-2xl shadow-xl p-6 md:p-8 space-y-6 flex flex-col" style="max-height: calc(100vh - 4rem);">
             <!-- Title -->
             <div class="text-center flex-shrink-0">
                 <h1 class="text-2xl md:text-3xl font-bold text-gray-900">Công cụ xử lý PDF & Ảnh</h1>
