--- a/test.html
+++ b/test.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="vi">
 <head>
@@ -39,15 +40,13 @@
     <!-- Header Placeholder -->
     <header id="page-header"></header>
 
-    <main class="min-h-screen w-full flex items-center justify-center p-4">
-        <div class="w-full max-w-6x2 bg-white rounded-2xl shadow-xl p-6 md:p-8 space-y-6 flex flex-col" style="max-height: calc(100vh - 4rem);">
-            <!-- Title -->
-            <div class="text-center flex-shrink-0">
-                <h1 class="text-2xl md:text-3xl font-bold text-gray-900">Công cụ xử lý PDF & Ảnh</h1>
-                <p class="text-gray-500 mt-2">Tích hợp iLovePDF API</p>
-            </div>
+<main class="min-h-screen w-full bg-white p-6 md:p-8 space-y-6 flex flex-col">
+    <div class="text-center flex-shrink-0">
+        <h1 class="text-2xl md:text-3xl font-bold text-gray-900">Công cụ xử lý PDF & Ảnh</h1>
+        <p class="text-gray-500 mt-2">Tích hợp iLovePDF API</p>
+    </div>
 
-            <div class="flex-grow flex flex-col md:flex-row gap-8 overflow-hidden">
+    <div class="flex-grow flex flex-col md:flex-row gap-8 overflow-hidden">
                 <!-- Left Column: Options -->
                 <div class="w-full md:w-2/5 lg:w-1/3 space-y-6 flex-shrink-0 overflow-y-auto pr-4">
                     <!-- Upload Area -->
