--- a/index.html
+++ b/index.html
@@ -47,17 +47,22 @@
         <div class="feature-title">Vòng quay may mắn</div>
         <div class="feature-desc">Vòng quay may mắn giúp bạn tự tạo vòng quay random ngẫu nhiên cực kỳ tiện lợi. Bạn có thể dễ dàng nhập nội dung tùy chỉnh theo ý muốn như tên người chơi, phần quà, số ngẫu nhiên hay các chủ đề vui nhộn.</div>
       </a>
-      <a class="feature" href="test.html">
-        <img class="feature-img" src="https://cdn-icons-png.flaticon.com/512/2919/2919600.png" alt="Test">
-        <div class="feature-title">Test code</div>
-        <div class="feature-desc">Soon.</div>
-      </a>
       <a class="feature" href="converter.html">
+        <img class="feature-img" src="converter.png" alt="Chuyển đổi tài liệu">
+        <div class="feature-title">Chuyển đổi định dạng tài liệu PDF</div>
+        <div class="feature-desc">Đây là một nền tảng trực tuyến cung cấp đầy đủ các công cụ để làm việc với tệp PDF, bao gồm nối, chia tách, nén, chuyển đổi, và chỉnh sửa các tài liệu PDF.</div>>
+      </a>
+      <a class="feature" href="test.html">
         <img class="feature-img" src="icon-tumoi.png" alt="Học từ mới">
         <div class="feature-title">Soon </div>
         <div class="feature-desc">Soon</div>
       </a>
       <a class="feature" href="soon.html">
+        <img class="feature-img" src="icon-tumoi.png" alt="Học từ mới">
+        <div class="feature-title">Soon </div>
+        <div class="feature-desc">Soon</div>
+      </a>
+        <a class="feature" href="soon.html">
         <img class="feature-img" src="icon-tumoi.png" alt="Học từ mới">
         <div class="feature-title">Soon </div>
         <div class="feature-desc">Soon</div>
