--- a/converter.html
+++ b/converter.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Công cụ xử lý PDF & Ảnh - iLovePDF API</title>
+    <title>Công cụ xử lý PDF & Ảnh</title>
     <!-- FIX: Favicon link points to your logo.png file -->
     <link rel="icon" type="image/png" href="logo.png">
     <!-- Tải Tailwind CSS -->
@@ -43,7 +43,7 @@
 <main class="min-h-screen w-full bg-white p-6 md:p-8 space-y-6 flex flex-col">
     <div class="text-center flex-shrink-0">
         <h1 class="text-2xl md:text-3xl font-bold text-gray-900">Công cụ xử lý PDF & Ảnh</h1>
-        <p class="text-gray-500 mt-2">Tích hợp iLovePDF API</p>
+        <p class="text-gray-500 mt-2">Tích hợp API</p>
     </div>
 
     <div class="flex-grow flex flex-col md:flex-row gap-8 overflow-hidden">
