--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <a class="feature" href="converter.html">
         <img class="feature-img" src="converter.png" alt="Chuyển đổi tài liệu">
         <div class="feature-title">Chuyển đổi định dạng tài liệu PDF</div>
-        <div class="feature-desc">Đây là một nền tảng trực tuyến cung cấp đầy đủ các công cụ để làm việc với tệp PDF, bao gồm nối, chia tách, nén, chuyển đổi, và chỉnh sửa các tài liệu PDF.</div>>
+        <div class="feature-desc">Đây là một nền tảng trực tuyến cung cấp đầy đủ các công cụ để làm việc với tệp PDF, bao gồm nối, chia tách, nén, chuyển đổi, và chỉnh sửa các tài liệu PDF.</div>
       </a>
       <a class="feature" href="test.html">
         <img class="feature-img" src="icon-tumoi.png" alt="Học từ mới">
