--- a/app.html
+++ b/app.html
@@ -252,14 +252,14 @@ body {
       {
         name: "Faststone Capture",
         icon: "fsc.png",
-        link: "https://storage.googleapis.com/drive-bulk-export-anonymous/20250722T135221.513Z/4133399871716478688/c92dfd0f-579f-4a7b-bc70-e412655a6c1e/1/e9fe4240-dbfa-4782-894f-fe6d617764cd?authuser",
+        link: "https://drive.google.com/drive/folders/1MmvnWFy-iM_S8usjLV-cM9JSxdIw6yaw",
         desc: "Phần mềm hỗ trợ chụp ảnh màn hình, sửa ảnh, quay video màn hình. ALL in One",
         price: "$19.95"
       },
       {
         name: "Winrar",
         icon: "rar.png",
-        link: "https://storage.googleapis.com/drive-bulk-export-anonymous/20250722T135401.040Z/4133399871716478688/d87a5b66-bd02-4ba1-ac2a-20c092dffef5/1/acdbd55f-bc10-49bb-b84c-6896cd5f4dc2?authuser",
+        link: "https://drive.google.com/drive/folders/1H9510-9jBIm-f4k0ara7SnbjVHyhe0IX",
         desc: "Phần mềm hỗ trợ giải và nén file phổ biến nhất hiện nay",
         price: "Miễn Phí"
       },
@@ -285,11 +285,11 @@ body {
         price: "$99/Year"
       },
             {
-        name: "Soon",
-        icon: "app.png",
-        link: "#",
-        desc: "Soon",
-        price: "Soon"
+        name: "Eplan",
+        icon: "eplan.png",
+        link: "https://drive.google.com/drive/folders/1e1ygVokmX3FpiUxyx38ennOYpunYYlpv",
+        desc: "Phần mềm EPLAN là một công cụ thiết kế và quản lý kỹ thuật mạnh mẽ, chủ yếu được sử dụng trong lĩnh vực thiết kế điện, tự động hóa và hệ thống điều khiển. EPLAN cung cấp các giải pháp toàn diện để tạo ra bản vẽ điện, thiết kế hệ thống tự động hóa và quản lý dữ liệu kỹ thuật, giúp các kỹ sư, nhà thiết kế và các nhà quản lý dự án thực hiện công việc một cách chính xác, hiệu quả và tiết kiệm thời gian. Với khả năng tích hợp mạnh mẽ, EPLAN hỗ trợ kết nối các hệ thống thiết kế khác nhau, giúp người dùng dễ dàng chia sẻ dữ liệu, đồng bộ hóa các thay đổi và tối ưu hóa quy trình làm việc. Phần mềm này không chỉ giúp tạo ra các sơ đồ điện và tài liệu thiết kế mà còn cung cấp các công cụ tự động hóa quy trình, giúp giảm thiểu lỗi và tăng năng suất làm việc.",
+        price: "Miễn phí"
       },
             {
         name: "Soon",
