--- a/tailieu.html
+++ b/tailieu.html
@@ -246,7 +246,7 @@
     <div class="doc-main">
       <div class="doc-title">Tài liệu học tập</div>
       <div class="doc-btn-group">
-        <a href="https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/Etg1I4MOqspNmjf0jplA_l4BegN8yNa1NzpwYUTYd1mDPg?e=GqkDDI" target="_blank" class="doc-btn epu">
+        <a href="https://drive.google.com/drive/folders/1tog5u2kjZTp69Rb9mJInberS_-DRnfQi?usp=sharing" target="_blank" class="doc-btn epu">
           <span class="icon">📚</span> Tài liệu EPU
         </a>
         <a href="https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/ElTA6Kwz0tVFiX9ZEwn5Fl0BZoY0Ln0eYl_gMlCpxCDsZQ?e=npfUva" target="_blank" class="doc-btn english">
