--- a/app.html
+++ b/app.html
@@ -292,10 +292,10 @@ body {
         price: "Miễn phí"
       },
             {
-        name: "Soon",
-        icon: "app.png",
-        link: "#",
-        desc: "Soon",
+        name: "AutoCAD 2021",
+        icon: "autocad.png",
+        link: "https://drive.google.com/drive/folders/1K0TD37wizd5iYTJr-utUpE-6Z8Kr_EdA?usp=sharing",
+        desc: "Bản CAD 2021",
         price: "Soon"
       },
             {
@@ -341,6 +341,27 @@ body {
         price: "Soon"
       },
             {
+        name: "Soon",
+        icon: "app.png",
+        link: "#",
+        desc: "Soon",
+        price: "Soon"
+      },
+                  {
+        name: "Soon",
+        icon: "app.png",
+        link: "#",
+        desc: "Soon",
+        price: "Soon"
+      },
+                  {
+        name: "Soon",
+        icon: "app.png",
+        link: "#",
+        desc: "Soon",
+        price: "Soon"
+      },
+                  {
         name: "Soon",
         icon: "app.png",
         link: "#",
