--- a/app.html
+++ b/app.html
@@ -296,7 +296,7 @@ body {
         icon: "autocad.png",
         link: "https://drive.google.com/drive/folders/1K0TD37wizd5iYTJr-utUpE-6Z8Kr_EdA?usp=sharing",
         desc: "Bản CAD 2021",
-        price: "Soon"
+        price: "Miễn phí"
       },
             {
         name: "Soon",
