--- a/app.html
+++ b/app.html
@@ -299,11 +299,11 @@ body {
         price: "Miễn phí"
       },
             {
-        name: "Soon",
-        icon: "app.png",
-        link: "#",
-        desc: "Soon",
-        price: "Soon"
+        name: "FX580",
+        icon: "fx580.png",
+        link: "https://drive.google.com/drive/folders/19qxA4YGQcWUOviF2jzU-cva3Kxa3JxhU?usp=sharing",
+        desc: "Phần mềm giả lập máy tính cầm tay FX580",
+        price: "Miễn phí"
       },
             {
         name: "Soon",
