--- a/app.html
+++ b/app.html
@@ -306,11 +306,11 @@ body {
         price: "Miễn phí"
       },
             {
-        name: "Soon",
-        icon: "app.png",
-        link: "#",
-        desc: "Soon",
-        price: "Soon"
+        name: "ZWCad",
+        icon: "zwcad.png",
+        link: "https://drive.google.com/drive/folders/1Mt9f2_6_ny87A6uN9at8F_T-6BGGrk9J?usp=sharing",
+        desc: "Thay thế cho phần mềm AutoCad, phù hợp hơn cho máy cấu hình thấp",
+        price: "Miễn phí"
       },
             {
         name: "Soon",
