--- a/app.html
+++ b/app.html
@@ -313,11 +313,11 @@ body {
         price: "Miễn phí"
       },
             {
-        name: "Soon",
-        icon: "app.png",
-        link: "#",
-        desc: "Soon",
-        price: "Soon"
+        name: "Adobe Acrobat Photoshop",
+        icon: "pts.png",
+        link: "https://drive.google.com/drive/folders/1eZF9x5VAsW4xwcvj291EqytKGVeG10qs?usp=sharing",
+        desc: "Phần mềm chỉnh sửa ảnh",
+        price: "Miễn phí"
       },
             {
         name: "Soon",
