--- a/app.html
+++ b/app.html
@@ -320,11 +320,11 @@ body {
         price: "Miễn phí"
       },
             {
-        name: "Soon",
-        icon: "app.png",
-        link: "#",
-        desc: "Soon",
-        price: "Soon"
+        name: "Foxit Phantom",
+        icon: "phantom.png",
+        link: "https://drive.google.com/drive/folders/1rPFOr-KH20ftzdXKX1Y1QNK40FupyalS?usp=sharing",
+        desc: "Phần mềm chỉnh sửa và đọc file PDF",
+        price: "Miễn phí"
       },
             {
         name: "Soon",
